# uvoutdated

./: pyproject.toml  readme.md  uvoutdated.py
